@@ -194,28 +194,12 @@ class exams implements renderable, templatable {
         $data->courseid = $this->courseid;
 
         // add popup_assign_gradeexam to every finished exam that has ungraded questions:
-        // TODO check if ungraded questions exist
-
+        // check if ungraded questions exist
         foreach ($data->finished_exams as $finished_exam) {
             $quiz = new stdClass();
             $quiz->id = $finished_exam->quizid;
 
-            // TODO: remove those experimental lines
-            // based on get_question_state_summary() from mod/quiz/report/grading/report.php
-            // get the questions of the quiz:
-            // based on moodle/mod/quiz/report.php
-            //$report = new quiz_grading_report();
-            //$cm = get_coursemodule_from_instance('quiz', $quiz->id, $COURSE->id, false, MUST_EXIST);
-            //$report->display($quiz, $cm, $COURSE);
-            //$report->quiz_report_get_significant_questions($quiz);
-
-            //$questions = quiz_report_get_significant_questions($quiz);
-            //$slots = array_keys($questions);
-            //$dm = new question_engine_data_mapper();
-            //return $dm->load_questions_usages_question_state_summary(
-            //        $this->get_qubaids_condition(), $slots);
-
-            // attempt to get the information if there are ungraded questions by own query:
+            // get the information if there are ungraded questions by own query:
             $ungraded_questions_count = block_exaquest_get_ungraded_questions_count($quiz);
             if ($ungraded_questions_count > 0) {
                 $popup = new popup_assign_gradeexam($this->courseid, $finished_exam->quizid);
