@@ -169,6 +169,8 @@
                 <FIELD NAME="quizid" TYPE="int" LENGTH="10" NOTNULL="true" SEQUENCE="false" COMMENT="quizid"/>
                 <FIELD NAME="assigneeid" TYPE="int" LENGTH="10" NOTNULL="true" SEQUENCE="false"
                        COMMENT="the assigned person"/>
+                <FIELD NAME="assignerid" TYPE="int" LENGTH="10" NOTNULL="true" SEQUENCE="false"
+                       COMMENT="the person that created the assignment. 0 if system"/>
                 <FIELD NAME="assigntype" TYPE="int" LENGTH="10" NOTNULL="true" SEQUENCE="false"
                        COMMENT="type of the assignment, e.g. addquestions"/>
                 <FIELD NAME="done" TYPE="int" LENGTH="1" NOTNULL="false" SEQUENCE="false"
@@ -178,6 +180,7 @@
                 <KEY NAME="primary" TYPE="primary" FIELDS="id"/>
                 <KEY NAME="quizid" TYPE="foreign" FIELDS="quizid" REFTABLE="quiz" REFFIELDS="id"/>
                 <KEY NAME="assigneeid" TYPE="foreign" FIELDS="assigneeid" REFTABLE="user" REFFIELDS="id"/>
+                <KEY NAME="assignerid" TYPE="foreign" FIELDS="assignerid" REFTABLE="user" REFFIELDS="id"/>
             </KEYS>
         </TABLE>
         <TABLE NAME="block_exaquestquizcomment"
