@@ -27,7 +27,7 @@
                     {{#exams}}
                         <li class="list-group-item d-flex justify-content-between align-items-start change-grading-request-comment"
                             id="change-grading-request-comment-li-{{id}}">
-                            <span class="flex-grow-1">{{name}}: {{comment}} <a href="{{linktograding}}"> Beurteilen</a></span>
+                            <span class="flex-grow-1">{{name}}: {{comment}}... Angefordert von: {{assignerfullname}}... <a href="{{linktograding}}"> Beurteilen</a></span>
                             <button id="change-grading-request-comment-button-{{id}}"
                                     class="mark-change-grading-request-as-done-button btn btn-light btn-sm ml-2"
                                     requestid= {{id}}
